--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "fancy-todo",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/khasogi27/fancy-todo.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/khasogi27/fancy-todo/issues"
-  },
-  "homepage": "https://github.com/khasogi27/fancy-todo#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "pg": "^8.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.4.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.6",
     "sequelize-cli": "^6.2.0"
   }
